--- a/L14End/src/main/resources/application.properties
+++ b/L14End/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode:HTML
 server.port=8080
-﻿server.servlet.context-path:/spring
+﻿server.servlet.context-path:/study
 ## 数据库访问配置
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
