--- a/L14End/src/main/resources/application.properties
+++ b/L14End/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8080
 ## 数据库访问配置
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/course?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://localhost:3306/study?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=root
 # 下面为连接池的补充设置，应用到上面所有数据源中
